# rtler

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  DESIGN.md  NOTICE  README.ar.md  README.md  README.ur.md
.github/workflows/: ci.yml
apps/macos-floating/: Package.swift  README.md
apps/macos-floating/Resources/: AppIcon.icns  Info.plist
apps/macos-floating/Sources/RTLer/: main.swift
apps/macos-floating/Sources/RtlerFloating/: main.swift
apps/macos-floating/Sources/RtlerFloatingCore/: RtlerBridge.swift  SelectionReplacementService.swift
apps/macos-floating/Tests/RtlerFloatingTests/: SelectionReplacementServiceTests.swift
docs/: experimental-floating-button-plan.md  macos-floating-shipping-plan.md  mvp-2-arabic-core-reliability-plan.md  mvp-3-mixed-arabic-text-reliability-plan.md  mvp-4-urdu-core-reliability-plan.md  mvp-5-persian-core-reliability-plan.md  mvp-6-cli-package-readiness-plan.md  windows-floating-app-plan.md
docs/agents/: domain.md  issue-tracker.md
fixtures/: README.md  arabic-smoke-expected.txt  arabic-smoke-input.txt  mixed-arabic-smoke-expected.txt  mixed-arabic-smoke-input.txt  persian-smoke-expected.txt  persian-smoke-input.txt  urdu-smoke-expected.txt  urdu-smoke-input.txt
include/: rtler.h
scripts/: build-macos-floating-app.sh
src/: lib.rs  main.rs
tests/: cli.rs  ffi.rs  transform.rs
